<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jian0080.androidlabs.WeatherForecastActivity">

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/text_current_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_current_temp"
        />

    <TextView
        android:id="@+id/text_max_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_max_temp"
        />

    <TextView
        android:id="@+id/text_min_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_min_temp"
         />

    <TextView
        android:id="@+id/text_wind_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Wind Speed"
        />

    <ProgressBar
        android:id="@+id/progressing"
        style="?android:attr/progressBarStyleHorizontal"
        android:minWidth="200dp"
        android:minHeight="20dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

</LinearLayout>
